# pv-inverter-proxy

./: .gitignore  CLAUDE.md  README.md  deploy.sh  install.sh  pyproject.toml
.claude/: launch.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v6.0-MILESTONE-AUDIT.md
config/: config.example.yaml  config.local.yaml  pv-inverter-proxy-recovery.service  pv-inverter-proxy-updater.path  pv-inverter-proxy-updater.service  pv-inverter-proxy.service  venus-os-fronius-proxy.service
docs/: PLUGIN-CHECKLIST.md  WHY-THIS-PROXY.md
scripts/: modbus_pinger.py  modbus_write_probe.py  venus_os_slavebusy_loopback_probe.py  venus_os_slavebusy_spike.py
tests/: test_aggregation.py  test_config.py  test_config_save.py  test_connection.py  test_context.py  test_control.py  test_control_state_persistence.py  test_dashboard.py  test_device_registry.py  test_distributor.py  test_health_endpoint.py  test_maintenance_mode.py  test_mdns_discovery.py  test_mqtt_payloads.py  test_mqtt_publisher.py  test_opendtu_plugin.py  test_plugin.py  test_proxy.py  test_proxy_reuseaddr.py  test_recovery.py  test_register_cache.py  test_releases.py  test_scanner.py  test_shelly_discovery.py  test_shelly_plugin.py  test_solaredge_plugin.py  test_solaredge_write.py  test_state_file.py  test_sungrow_plugin.py  test_sunspec_models.py  test_theme.py  test_throttle_caps.py  test_timeseries.py  test_updater_config.py  test_updater_github_client.py  test_updater_progress.py  test_updater_root_backup.py  test_updater_root_git_ops.py  test_updater_root_gpg_verify.py  (+17 more)
(+274 files in other folders)
